--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "chart.js": "^4.4.3",
     "html-react-parser": "^5.1.10",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.0",
