--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@hookform/resolvers": "^3.3.4",
     "chart.js": "^4.4.3",
     "html-react-parser": "^5.1.10",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.0",
+    "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
